fixed lightbox image flicker by delaying until head.ready()

--- a/domains/portfolio.aaronlademann.com/html/wp-content/themes/gridlocked/css/light.css
+++ b/domains/portfolio.aaronlademann.com/html/wp-content/themes/gridlocked/css/light.css
@@ -68,7 +68,8 @@
 	.single a:hover .caption, .single a.caption:hover, .single #single-sidebar .caption a:hover { text-decoration: underline !important; }
 
 	/* .js will reveal this */
-	.lightbox .caption { visibility: hidden; }
+	.lightbox .caption, .lightbox img { visibility: hidden; }
+
 
 	#tagline {
 		color: #7b7d80;
